--- a/project/app/templates/app/index.html
+++ b/project/app/templates/app/index.html
@@ -7,6 +7,7 @@
 <html>
 	{% load static %}
 	<head>
+		
 
 		<title>Fashion_Show_Case</title>
 		<meta charset="utf-8" />
@@ -25,7 +26,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Fashion_ShowCase</span>
+									<span class="symbol"><img src="{% static 'assets/images/logo.svg' %}" alt="" /></span><span class="title">Fashion_ShowCase</span>
 								</a>
 
 							<!-- Nav -->
@@ -54,7 +55,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>This is Fashion_ShowCase, A Enterance to Fashionable World<br />
+								<h1>This is Fashion_ShowCase, An Enterance to Fashionable World<br />
 									<div class="field half">
 										<input class="file-upload-input" type="file" onchange="readURL(this)" accept="Image/*">
 										
@@ -77,7 +78,7 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/saree3.jpg" alt="" />
+										<img src='/static/assets/images/saree3.jpg' alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>adorable</h2>
@@ -88,7 +89,7 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/wjeans.jpg" alt="" />
+										<img src='/static/assets/images/wjeans.jpg' alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Perfect</h2>
@@ -99,7 +100,7 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/sandal.jpg" alt="" />
+										<img src="/static/assets/images/sandal.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>dashing</h2>
@@ -110,7 +111,7 @@
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="images/jumpsuit.webp" alt="" />
+										<img src="/static/assets/images/jumpsuit.webp" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>stunning</h2>
@@ -121,7 +122,7 @@
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images/handbag.jpg" alt="" />
+										<img src="/static/assets/images/handbag.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>glorifying</h2>
@@ -132,7 +133,7 @@
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="images/frock.jpg" alt="" />
+										<img src="/static/assets/images/frock.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>stunning</h2>
@@ -143,7 +144,7 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/kurta.jpg" alt="" />
+										<img src="/static/assets/images/kurta.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>highlighted</h2>
@@ -154,7 +155,7 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/mjeans.jpg" alt="" />
+										<img src="/static/assets/images/mjeans.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Comfort</h2>
@@ -165,7 +166,7 @@
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/watch.jpg" alt="" />
+										<img src="/static/assets/images/watch.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>suppub</h2>
@@ -177,7 +178,7 @@
 								
 								<article class="style5">
 									<span class="image">
-										<img src="images/shirt3.jpg" alt="" />
+										<img src="/static/assets/images/shirt3.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Sparky</h2>
@@ -188,7 +189,7 @@
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="images/shoe2.jpg" alt="" />
+										<img src="/static/assets/images/shoe2.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Sporty</h2>
@@ -199,7 +200,7 @@
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="images/wjeans.jpg" alt="" />
+										<img src="/static/assets/images/wjeans.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>cool</h2>
@@ -218,6 +219,7 @@
 							<section>
 								<h2>Place Order</h2>
 								<form method="post" action="#">
+									{% csrf_token %}
 									<div class="fields">
 										<div class="field half">
 											<input type="text" name="name" id="name" placeholder="Name" />
@@ -226,7 +228,7 @@
 											<input type="email" name="email" id="email" placeholder="email" />
 										</div>
 										<div class="field">
-											<textarea name="message" id="message" placeholder="Shipping Address"></textarea>
+											<textarea name="ship" id="ship" placeholder="Shipping Address"></textarea>
 										</div>
 									</div>
 									<ul class="actions">
@@ -259,11 +261,11 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="{% static 'assets/js/jquery.min.js' %}"></script>
+			<script src="{% static 'assets/js/browser.min.js'%}"></script>
+			<script src="{% static 'assets/js/breakpoints.min.js'%}"></script>
+			<script src="{% static 'assets/js/util.js'%}"></script>
+			<script src="{% static 'assets/js/main.js'%}"></script>
 
 	</body>
 </html>
