--- a/project/app/templates/app/index.html
+++ b/project/app/templates/app/index.html
@@ -43,10 +43,10 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Products</a></li>
-							<li><a href="generic.html">Place Order</a></li>
-							<li><a href="generic.html">Follow</a></li>
+							<li><a href="#wrapper">Home</a></li>
+							<li><a href="#product">Products</a></li>
+							<li><a href="#footer">Place Order</a></li>
+							<li><a href="#footer">Follow</a></li>
 							<!-- <li><a href="elements.html">Elements</a></li> -->
 						</ul>
 					</nav>
@@ -75,13 +75,13 @@
 								<!-- template designed by <a href="http://html5up.net">HTML5 UP</a>.--></h1> 
 								<p>If it ever happens to you that you like any clothes of someone but you are not able to explain it in terms of fashion then you are at the right place we are providing you the facility to share one picture of that product and then we will recommend many products similar to that one provided by you..</p>
 							</header>
-							<section class="tiles">
+							<section class="tiles" id='product'>
 								<article class="style1">
 									<span class="image">
 										<img src='/static/assets/images/saree3.jpg' alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>adorable</h2>
+									<a href="">
+										<h2>adorable//P1</h2>
 										<div class="content">
 											<p>This is one of our suggestion as per provided sample .</p>
 										</div>
@@ -91,8 +91,8 @@
 									<span class="image">
 										<img src='/static/assets/images/wjeans.jpg' alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Perfect</h2>
+									<a href="">
+										<h2>Perfect//P2</h2>
 										<div class="content">
 											<p>This is one of our suggestion as per provided sample .</p>
 										</div>
@@ -102,8 +102,8 @@
 									<span class="image">
 										<img src="/static/assets/images/sandal.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>dashing</h2>
+									<a href="">
+										<h2>dashing//P3</h2>
 										<div class="content">
 											<p>This is one of our suggestion as per provided sample .</p>
 										</div>
@@ -113,8 +113,8 @@
 									<span class="image">
 										<img src="/static/assets/images/jumpsuit.webp" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>stunning</h2>
+									<a href="">
+										<h2>stunning//P4</h2>
 										<div class="content">
 											<p>This is one of our suggestion as per provided sample .</p>
 										</div>
@@ -124,8 +124,8 @@
 									<span class="image">
 										<img src="/static/assets/images/handbag.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>glorifying</h2>
+									<a href="">
+										<h2>glorifying//P5</h2>
 										<div class="content">
 											<p>This is one of our suggestion as per provided sample .</p>
 										</div>
@@ -135,8 +135,8 @@
 									<span class="image">
 										<img src="/static/assets/images/frock.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>stunning</h2>
+									<a href="">
+										<h2>stunning//P6</h2>
 										<div class="content">
 											<p>This is one of our suggestion as per provided sample .</p>
 										</div>
@@ -146,8 +146,8 @@
 									<span class="image">
 										<img src="/static/assets/images/kurta.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>highlighted</h2>
+									<a href="">
+										<h2>highlighted//P7</h2>
 										<div class="content">
 											<p>This is one of our suggestion as per provided sample .</p>
 										</div>
@@ -157,8 +157,8 @@
 									<span class="image">
 										<img src="/static/assets/images/mjeans.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Comfort</h2>
+									<a href="">
+										<h2>Comfort//P8</h2>
 										<div class="content">
 											<p>This is one of our suggestion as per provided sample .</p>
 										</div>
@@ -168,8 +168,8 @@
 									<span class="image">
 										<img src="/static/assets/images/watch.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>suppub</h2>
+									<a href="">
+										<h2>suppub//P9</h2>
 										<div class="content">
 											<p>This is one of our suggestion as per provided sample .</p>
 										</div>
@@ -180,8 +180,8 @@
 									<span class="image">
 										<img src="/static/assets/images/shirt3.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Sparky</h2>
+									<a href="">
+										<h2>Sparky//P10</h2>
 										<div class="content">
 											<p>This is one of our suggestion as per provided sample .</p>
 										</div>
@@ -191,8 +191,8 @@
 									<span class="image">
 										<img src="/static/assets/images/shoe2.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Sporty</h2>
+									<a href="">
+										<h2>Sporty//P11</h2>
 										<div class="content">
 											<p>This is one of our suggestion as per provided sample .</p>
 										</div>
@@ -202,8 +202,8 @@
 									<span class="image">
 										<img src="/static/assets/images/wjeans.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>cool</h2>
+									<a href="">
+										<h2>cool//P12</h2>
 										<div class="content">
 											<p>This is one of our suggestion as per provided sample .</p>
 										</div>
@@ -225,7 +225,10 @@
 											<input type="text" name="name" id="name" placeholder="Name" />
 										</div>
 										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="email" />
+											<input type="email" name="email" id="email" placeholder="Email" />
+										</div>
+										<div class="field half">
+											<input type="text" name="pro" id="pro" placeholder="Product ID" />
 										</div>
 										<div class="field">
 											<textarea name="ship" id="ship" placeholder="Shipping Address"></textarea>
@@ -253,7 +256,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; fashion_showCase. All rights reserved</li><li>Design: <a href="https://www.linkedin.com/in/manya0202/">Manya kumari</a></li>
 							</ul>
 						</div>
 					</footer>
