--- a/project/app/templates/app/test.html
+++ b/project/app/templates/app/test.html
@@ -11,8 +11,9 @@
     <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{form}}
+
         <input type="submit" name="submit" value ="upload">
-        
+        <img src= {{ url }} >
     </form>
 </body>
 </html>
